<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="begin_video_session_prompt">Begin Video Session.  Take a recording of your wound.
        In your video, please apply pressure at five points around your wound.  Apply enough
        pressure such that your skin changes color.</string>
    <string name="app_name">DocTouch</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="medical_professional">Medical Professional</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_video">Take Video</string>
    <string name="Review_videos_to_send">Review Videos to Send</string>
    <string name="check_for_new_updates">Check For New Updates</string>

</resources>
